--- a/events.html
+++ b/events.html
@@ -100,6 +100,10 @@
                                     <li class="hovertochange" id="c3" data-text="Sponsors"><span id="cl-3"
                                             class="commonwrong">&#10006;</span><a href="sponsors.html"
                                             style="font-family: 'Montserrat';color: #1bfaad;">Sponsors</a></li>
+                                    <li class="hovertochange" id="c5" data-text="Teams and Domains"><span id="cl-5"
+                                            class="commonwrong">&#10006;</span><a
+                                            href="https://www.meraevents.com/event/elan2022" target="_blank"
+                                            style="font-family: Montserrat;color: #1bfaad;">Workshops</a></li>
                                     <li class="hovertochange" id="c4" data-text="Teams and Domains"><span id="cl-4"
                                             class="commonwrong">&#10006;</span><a href="teamsanddomains.html"
                                             style="font-family: Montserrat;color: #1bfaad;">Teams and Domains</a></li>
@@ -684,15 +688,15 @@
                             <h6 class="text-uppercase mb-4 font-weight-bold" style="font-family: montserrat;"><b
                                     style="font-family: 'Montserrat';">Contact us</b></h6>
                             <p data-aos="fade-up" data-aos-once="true" style="font-family: 'Montserrat';"><i
-                                    class="fas fa-home mr-3"></i> Elan &amp;
+                                    class="fas fa-home mr-3"></i>Elan &amp;
                                 &#951;vision Web Team</p>
                             <p data-aos="fade-up" data-aos-once="true" style="font-family: 'Montserrat';"><i
                                     class="fas fa-envelope mr-3 me-2"></i>elan@iith.ac.in</p>
                             <p data-aos="fade-up" data-aos-once="true" style="font-family: 'Montserrat';"><i
-                                    class="fas fa-phone mr-3"></i> +91 7995204145
+                                    class="fas fa-phone mr-3"></i>+91 7995204145
                             </p>
                             <p data-aos="fade-up" data-aos-once="true" style="font-family: 'Montserrat';"><i
-                                    class="fas fa-phone mr-3"></i> +91 93261 68076
+                                    class="fas fa-phone mr-3"></i>+91 93261 68076
                             </p>
                         </div>
                         <!-- Grid column -->
@@ -760,22 +764,27 @@
         AOS.init({
             duration: 2000
         });
-        let cl_1 = document.getElementById('cl-1')
-        let cl_2 = document.getElementById('cl-2')
-        let cl_3 = document.getElementById('cl-3')
-        let cl_4 = document.getElementById('cl-4')
-        let c1 = document.getElementById('c1')
-        let c2 = document.getElementById('c2')
-        let c3 = document.getElementById('c3')
-        let c4 = document.getElementById('c4')
-        c1.addEventListener("mouseover", () => { cl_1.style.color = "red" })
-        c1.addEventListener("mouseleave", () => { cl_1.style.color = "rgba(107, 201, 255, 0.116)" })
-        c2.addEventListener("mouseover", () => { cl_2.style.color = "red" })
-        c2.addEventListener("mouseleave", () => { cl_2.style.color = "rgba(107, 201, 255, 0.116)" })
-        c3.addEventListener("mouseover", () => { cl_3.style.color = "red" })
-        c3.addEventListener("mouseleave", () => { cl_3.style.color = "rgba(107, 201, 255, 0.116)" })
-        c4.addEventListener("mouseover", () => { cl_4.style.color = "red" })
-        c4.addEventListener("mouseleave", () => { cl_4.style.color = "rgba(107, 201, 255, 0.116)" })
+        let cl_1=document.getElementById('cl-1')
+        let cl_2=document.getElementById('cl-2')
+        let cl_3=document.getElementById('cl-3')
+        let cl_4=document.getElementById('cl-4')
+        let cl_5=document.getElementById('cl-5')
+        let c1=document.getElementById('c1')
+        let c2=document.getElementById('c2')
+        let c3=document.getElementById('c3')
+        let c4=document.getElementById('c4')
+        let c5=document.getElementById('c5')
+        c1.addEventListener("mouseover",()=>{cl_1.style.color="red"})
+        c1.addEventListener("mouseleave",()=>{cl_1.style.color="rgba(107, 201, 255, 0.116)"})
+        c2.addEventListener("mouseover",()=>{cl_2.style.color="red"})
+        c2.addEventListener("mouseleave",()=>{cl_2.style.color="rgba(107, 201, 255, 0.116)"})
+        c3.addEventListener("mouseover",()=>{cl_3.style.color="red"})
+        c3.addEventListener("mouseleave",()=>{cl_3.style.color="rgba(107, 201, 255, 0.116)"})
+        c4.addEventListener("mouseover",()=>{cl_4.style.color="red"})
+        c4.addEventListener("mouseleave",()=>{cl_4.style.color="rgba(107, 201, 255, 0.116)"})
+        c5.addEventListener("mouseover",()=>{cl_5.style.color="red"})
+        c5.addEventListener("mouseleave",()=>{cl_5.style.color="rgba(107, 201, 255, 0.116)"})
+
     </script>
     <script src="js/lazyload.js"></script>
 </body>
