--- a/index.html
+++ b/index.html
@@ -92,6 +92,7 @@
                             <li class="hovertochange" id="c1" data-text="Home"><span id="cl-1" class="commonwrong">&#10006;</span><a href="index.html" style="font-family: Montserrat;color: #1bfaad;">Home</a></li>
                             <li class="hovertochange" id="c2" data-text="Events" ><span id="cl-2" class="commonwrong">&#10006;</span><a href="events.html" style="font-family: 'Montserrat';color: #1bfaad;">Events</a></li>
                             <li class="hovertochange" id="c3" data-text="Sponsors"><span id="cl-3" class="commonwrong">&#10006;</span><a href="sponsors.html"style="font-family: 'Montserrat';color: #1bfaad;">Sponsors</a></li>
+                            <li class="hovertochange" id="c5" data-text="Teams and Domains"><span id="cl-5" class="commonwrong">&#10006;</span><a href="https://www.meraevents.com/event/elan2022" target="_blank" style="font-family: Montserrat;color: #1bfaad;" >Workshops</a></li>
                             <li class="hovertochange" id="c4" data-text="Teams and Domains"><span id="cl-4" class="commonwrong">&#10006;</span><a href="teamsanddomains.html" style="font-family: Montserrat;color: #1bfaad;" >Teams and Domains</a></li>
                           </ul>
                     </div>
@@ -324,10 +325,12 @@
         let cl_2=document.getElementById('cl-2')
         let cl_3=document.getElementById('cl-3')
         let cl_4=document.getElementById('cl-4')
+        let cl_5=document.getElementById('cl-5')
         let c1=document.getElementById('c1')
         let c2=document.getElementById('c2')
         let c3=document.getElementById('c3')
         let c4=document.getElementById('c4')
+        let c5=document.getElementById('c5')
         c1.addEventListener("mouseover",()=>{cl_1.style.color="red"})
         c1.addEventListener("mouseleave",()=>{cl_1.style.color="rgba(107, 201, 255, 0.116)"})
         c2.addEventListener("mouseover",()=>{cl_2.style.color="red"})
@@ -336,6 +339,9 @@
         c3.addEventListener("mouseleave",()=>{cl_3.style.color="rgba(107, 201, 255, 0.116)"})
         c4.addEventListener("mouseover",()=>{cl_4.style.color="red"})
         c4.addEventListener("mouseleave",()=>{cl_4.style.color="rgba(107, 201, 255, 0.116)"})
+        c5.addEventListener("mouseover",()=>{cl_5.style.color="red"})
+        c5.addEventListener("mouseleave",()=>{cl_5.style.color="rgba(107, 201, 255, 0.116)"})
+
     </script>
     <!-- SwiperJs for including a customised slider -->
     <script src="js/swiper.js"></script>
